force-app/main/default/objects/b3f__Response_Mapping__mdt/b3f__Response_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Response Mapping</label>
    <pluralLabel>Responses Mapping</pluralLabel>
</CustomObject>