force-app/main/default/objects/b3f__Response_Mapping__mdt/fields/b3f__Active__c.field-meta.xml
<CustomField>
    <fullName>b3f__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is this mapping active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>