force-app/main/default/objects/b3f__Response_Mapping__mdt/fields/b3f__Form_Response_Object__c.field-meta.xml
<CustomField>
    <fullName>b3f__Form_Response_Object__c</fullName>
    <inlineHelpText>This must always map to the Form Response Object (3B Forms)</inlineHelpText>
    <label>Form Response Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Responses_Mapping1</relationshipLabel>
    <relationshipName>Responses_Mapping1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>