force-app/main/default/objects/b3f__Response_Mapping__mdt/fields/b3f__Mapping_Object__c.field-meta.xml
<CustomField>
    <fullName>b3f__Mapping_Object__c</fullName>
    <inlineHelpText>Which object is the form response going to be linked to?</inlineHelpText>
    <label>Mapping Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Responses_Mapping</relationshipLabel>
    <relationshipName>Responses_Mapping</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>