force-app/main/default/objects/b3f__Response_Mapping__mdt/validationRules/b3f__Only_allow_Form_Response_Object.validationRule-meta.xml
<ValidationRule>
    <fullName>b3f__Only_allow_Form_Response_Object</fullName>
    <active>true</active>
    <errorConditionFormula>b3f__Form_Response_Object__r.QualifiedApiName != &apos;b3f__FormResponse__c&apos;</errorConditionFormula>
    <errorDisplayField>b3f__Form_Response_Object__c</errorDisplayField>
    <errorMessage>Please select &quot;Form Response&quot; here.</errorMessage>
</ValidationRule>